--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "embla-carousel-autoplay": "^8.2.0",
     "embla-carousel-react": "^8.2.0",
     "gsap": "^3.12.5",
     "next": "14.2.5",
