--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "embla-carousel-autoplay": "^8.2.0",
     "embla-carousel-react": "^8.2.0",
     "gsap": "^3.12.5",
-    "next": "14.2.5",
+    "next": "^14.2.17",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
