--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emotion/styled": "^11.13.0",
     "embla-carousel-autoplay": "^8.2.0",
     "embla-carousel-react": "^8.2.0",
+    "framer-motion": "^12.23.3",
     "gsap": "^3.12.5",
     "next": "^14.2.17",
     "react": "^18",
